2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/PropertyTree.cs: Use a theme color for the property group
	  headers. Fixes bug #356244.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Label.cs: Fix generation of MnemonicWidget property
	  assignment.
	* libstetic/wrapper/objects.xml: The default way of 
	* libstetic/editor/WidgetSelector.cs: Sort the list of widgets. Hide
	  unselectable widgets.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/GuiDispatchServerSink.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/Project.cs: Made events fired by the designer synchronous.
	  Fixes some criticals caused by events being fired in the wrong order.
	* libstetic/wrapper/Frame.cs, libstetic/wrapper/CheckButton.cs,
	  libstetic/wrapper/Container.cs, libstetic/wrapper/ScrolledWindow.cs: Fix
	  some gtk warnings and criticals.

2008-01-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesigner.cs: Fix typo.

2008-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ComboBox.cs: Fix bug #324925 - Glade import: Text combos
	  not correctly imported.

2008-01-14  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/Boolean.cs: Improve rendering of checkbox.

2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libstetic/editor/ActionMenu.cs, libstetic/editor/ActionMenuBar.cs,
	libstetic/editor/ActionToolbar.cs, libstetic/undo/ActionDiffAdaptor.cs
	libstetic/editor/ActionGroupEditor.cs: Build with the latest gmcs.

2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libsteticui/ActionGroupToolbar.cs: Build with the latest gmcs.

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Don't fire load events when loading a
	  widget. Fixes part of bug #352065.
	* libstetic/wrapper/Paned.cs: Fix bug in paned initialization. Fixes part of
	  bug #352065.
	* libstetic/editor/IconSelectorItem.cs: Added null check. Fixes some
	  crashes.
